5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1836_2602.log
== SUBMITION (2019-06-25 11:35:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)


print("estafilococo:",r[0,0])
print("salmonela:",r[1,0])
print("coli:",r[2,0])
-- EXECUTION TIME:
0.889473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 10, in <module>
    print("estafilococo:",r[0,0])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:35:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)


print("estafilococo:",r[0,0])
print("salmonela:",r[1,0])
print("coli:",r[2,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:36:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r)

print("estafilococo:",r[0,0])
print("salmonela:",r[1,0])
print("coli:",r[2,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r)

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[1,0],1))
print("coli:",round(r[2,0],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:40:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r[0,0])

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:41:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r[0,0])

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:41:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r[0,0])

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- EXECUTION TIME:
1.28359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 8, in <module>
    print(r[0,0])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:43:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
print(r[0,0])

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=dot(inv(comida),mat.T)
a=r[0,0]
print(a)

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))
print(r)
print("estafilococo:",round(r[0,0],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:47:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))
print(r)
print("estafilococo:",round(r[1,1],1))
print("salmonela:",round(r[0,1],1))
print("coli:",round(r[0,2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:49:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))
print(r)
print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
-- EXECUTION TIME:
1.02906
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
[1923.42  1864.47  -439.015]
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
[-31711.05   16783.4    12183.555]
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
[22647.24  -9717.28  -6745.265]
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:49:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
-- EXECUTION TIME:
0.974136
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
Entre com a matriz:estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Entre com a matriz:estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Entre com a matriz:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:49:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:54:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
if(r[0]<r[1]and r[0]<r[2]):
	print("estafilococo")
elif(r[1]<r[0]and r[1]<r[2]):
	print("salmonela")
elif(r[2]<r[1]and r[2]<r[0]):
-- ERROR:
File "XXXX", line 17
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:54:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
if(r[0]<r[1]and r[0]<r[2]):
	print("estafilococo")
elif(r[1]<r[0]and r[1]<r[2]):
	print("salmonela")
elif(r[2]<r[1]and r[2]<r[0]):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:55:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
if(r[0]<r[1]and r[0]<r[2]):
	print("estafilococo")
elif(r[1]<r[0]and r[1]<r[2]):
	print("salmonela")
elif(r[2]<r[1]and r[2]<r[0]):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:55:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entre com a matriz:")))

comida=array([[2,1,4],[1,2,0],[2,3,2]])
r=array(dot(inv(comida),mat.T))

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
if(r[0]<r[1]and r[0]<r[2]):
	print("estafilococo")
elif(r[1]<r[0]and r[1]<r[2]):
	print("salmonela")
elif(r[2]<r[1]and r[2]<r[0]):
	print("coli")
-- EXECUTION TIME:
0.730851
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
